recuperando o trabalho feito na outra versão

--- a/DefinitiveAtleticator/DefinitiveAtleticator/DefinitiveAtleticator.csproj
+++ b/DefinitiveAtleticator/DefinitiveAtleticator/DefinitiveAtleticator.csproj
@@ -148,9 +148,9 @@
       <LastGenOutput>DataClasses1.designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </Content>
-    <Content Include="Models\DataClasses1.dbml.layout">
+    <None Include="Models\DataClasses1.dbml.layout">
       <DependentUpon>DataClasses1.dbml</DependentUpon>
-    </Content>
+    </None>
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
